--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: ^0.8.7
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_dotenv: ^5.1.0
+  html: ^0.15.4
 
 dev_dependencies:
   flutter_test:
