--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   http: ^0.13.4
+  path_provider: ^2.1.3
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -62,6 +63,7 @@ flutter:
   uses-material-design: true
   assets:
     - .env
+    - assets/images/cat.jpeg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
