채팅, 프로필화면 디자인 완료

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,7 +84,7 @@ flutter:
     - family: title
       fonts:
       - asset: assets/fonts/ChosunNm.ttf
-
+        weight: 700
   # fonts:
   #   - family: Schyler
   #     fonts:
